Opened 16 years ago
Closed 16 years ago
#3843 closed bug (fixed)
reindex 2.0.0 does not work as expected
Reported by: | mmadia | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev30356 gcc2
reindex from : http://bebits.com/app/2033
open a tracker query of a formula TEST:FOO=42 cd /boot addattr -t int TEST:FOO 42 var/ mkindex -t int TEST:FOO -d /boot reindex -rv TEST:FOO var/ expected results: /boot/var displays in tracker query. actual results: nothing .
Change History (3)
comment:1 by , 16 years ago
Component: | File Systems/BFS → - General |
---|---|
Status: | new → assigned |
comment:2 by , 16 years ago
I am assuming this works in BeOS/Zeta? Because I really didn't expect it to work as advertized for the simple fact that the query is resolved before the index exists so it won't get updates later on as it thought the index is non-existant. Or am I missing something?
comment:3 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev30511 - I've added an updated version of reindex to the image.
The original reindex does not work on Haiku, as our BFS does not update an index if the attribute did not actually change.
Note:
See TracTickets
for help on using tickets.
I recently noticed that as well, but not on a machine/place where I had its sources (open source is really a great idea :-)).