* Added a version of reindex that works under Haiku. Changes made to the   original version:   - removed the BFS bug work-around to create two temporary files first; this     work around is not needed in our BFS implementation.   - improved error output.   - remove attributes before rewriting them. This is needed as BFS won't update     the indices anymore if the attribute has not actually been changed.   - applied our coding style. * This also fixes bug #3843.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30511 a95241bf-73f2-0310-859d-f6bbb57e9c96